<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ApprovalScreen">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:theme="@style/AppTheme.AppBarOverlay">
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabMode="scrollable">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_polt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_plot" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_cost" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_discount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_discount" />
            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_commission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_commission" />

        </com.google.android.material.tabs.TabLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>