<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminMenu">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            style="@style/textviewStyleHeading"
            android:text="@string/Admin_Services"
            />
        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="horizontal"
            android:weightSum="3">
            <androidx.cardview.widget.CardView
                android:layout_margin="5dp"
                android:id="@+id/Approvalbtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                app:cardBackgroundColor="@color/colorPrimary">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:contentDescription="@string/Approval_Image"
                        android:src="@mipmap/icn_approval"/>
                    <TextView
                        style="@style/textviewStyle"
                        android:text="@string/Plot_Approval"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_margin="5dp"
                android:id="@+id/card_approved"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                app:cardBackgroundColor="@color/colorPrimary">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:src="@mipmap/ic_admin_approved"/>
                    <TextView
                        style="@style/textviewStyle"
                        android:text="@string/Plot_Approved"
                       />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_margin="5dp"
                android:id="@+id/card_Plot_matrix"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                app:cardBackgroundColor="@color/colorPrimary">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:contentDescription="@string/Approval_Image"
                        android:src="@mipmap/ic_plotmatrix"/>
                    <TextView
                        style="@style/textviewStyle"
                        android:text="@string/Plot_matrix" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="horizontal"
            android:weightSum="3">
            <androidx.cardview.widget.CardView
                android:layout_margin="5dp"
                android:id="@+id/card_day_collection"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                app:cardBackgroundColor="@color/colorPrimary">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        style="@style/textviewStyle"
                        android:text="@string/day_collection" />
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:src="@mipmap/ic_day_collection"/>
                    <TextView
                        android:id="@+id/txt_adminmenu_collection"
                        style="@style/textviewStyle"
                        android:text="0"
                        android:fontFamily="@font/montserratregular"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_margin="5dp"
                android:id="@+id/card_day_payments"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                app:cardBackgroundColor="@color/colorPrimary">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                      style="@style/textviewStyle"
                        android:text="@string/day_Payments"
                        />
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:src="@mipmap/ic_day_payments"/>
                    <TextView
                        android:id="@+id/txt_adminmenu_payments"
                        style="@style/textviewStyle"
                        android:text="0"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_margin="5dp"
                android:id="@+id/card_bookings"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                app:cardBackgroundColor="@color/colorPrimary">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        style="@style/textviewStyle"
                        android:text="@string/day_bookings" />
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:src="@mipmap/ic_day_bookings"/>
                    <TextView
                        android:id="@+id/txt_booking_count"
                        style="@style/textviewStyle"
                        android:text="0"
                       />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="horizontal"
            android:weightSum="3">
            <androidx.cardview.widget.CardView
                android:layout_margin="5dp"
                android:id="@+id/PinChange"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                app:cardBackgroundColor="@color/colorPrimary">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:src="@mipmap/ic_action_pinchange"/>
                    <TextView
                        style="@style/textviewStyle"
                        android:text="@string/PinChange" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
            android:id="@+id/prog_admin_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"/>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/feb_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/stat_notify_sync_noanim"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:backgroundTint="@color/colorPrimary"/>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</RelativeLayout>