<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.2"
                android:background="@drawable/custombackground">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/Venture"
                    android:fontFamily="@font/montserratregular"
                    android:textColor="@android:color/black" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/custombackground">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/Sector"
                    android:fontFamily="@font/montserratregular"
                    android:textColor="@android:color/black" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/custombackground">
            <TextView
                android:id="@+id/HeaderTitplot"
                android:layout_width="match_parent"
                android:fontFamily="@font/montserratregular"
                android:layout_height="match_parent"
                android:textColor="@android:color/black" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="horizontal"
                android:background="@drawable/custombackground">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/PlotArea"
                    android:fontFamily="@font/montserratregular"
                    android:textColor="@android:color/black"/>
                <TextView
                    android:id="@+id/caltype"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserratregular"
                    android:textColor="@android:color/black"
                    android:singleLine="true"
                    android:ellipsize="end"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:weightSum="5">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.2"
                android:background="@drawable/custombackground">
            <TextView
                android:id="@+id/Headervenid"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:fontFamily="@font/montserratregular"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/custombackground">
            <TextView
                android:id="@+id/Headersecid"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:fontFamily="@font/montserratregular"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/custombackground">
            <TextView
                android:id="@+id/Headerplot"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:fontFamily="@font/montserratregular"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/custombackground">
            <TextView
                android:id="@+id/PlotArea"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:fontFamily="@font/montserratregular"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:singleLine="true"
                android:ellipsize="end"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.9"
                android:background="@drawable/custombackground">
            <TextView
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:text="@string/PbNo"
                android:fontFamily="@font/montserratregular"
                android:textColor="@android:color/black" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.6"
                android:background="@drawable/custombackground">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Name"
                android:fontFamily="@font/montserratregular"
                android:textColor="@android:color/black" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:background="@drawable/custombackground">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/dateJoin"
                android:fontFamily="@font/montserratregular"
                android:textColor="@android:color/black"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:weightSum="5">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.9"
                android:background="@drawable/custombackground">
            <TextView
                android:id="@+id/Headerpassbook"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:fontFamily="@font/montserratregular"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.6"
                android:background="@drawable/custombackground">
            <TextView
                android:id="@+id/Headername"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left"
                android:fontFamily="@font/montserratregular"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:background="@drawable/custombackground">
            <TextView
                android:id="@+id/ApplicentDoj"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:fontFamily="@font/montserratregular"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>