<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                app:cardElevation="7dp">
                <include layout="@layout/headerdetails"/>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                app:cardElevation="7dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/Plot_App_head"
                    android:fontFamily="@font/montserratregular"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="#000"/>
            </androidx.cardview.widget.CardView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="5">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical">
                    <TextView
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Plot_App_face"
                        android:fontFamily="@font/montserratregular"
                        android:textSize="20sp"
                        android:textColor="#000"/>
                    <TextView
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Premium"
                        android:fontFamily="@font/montserratregular"
                        android:textColor="#000"
                        android:textSize="20sp"/>

                    <TextView
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Plot Category"
                        android:fontFamily="@font/montserratregular"
                        android:textColor="#000"
                        android:textSize="20sp"/>
                    <TextView
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Spl.Premium"
                        android:fontFamily="@font/montserratregular"
                        android:textColor="#000"
                        android:textSize="20sp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="vertical">
                    <TextView
                        android:layout_margin="5dp"
                        android:id="@+id/txt_plot_facing"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserratregular"
                        android:textSize="20sp"/>
                    <TextView
                        android:layout_margin="5dp"
                        android:id="@+id/txt_plot_preminum"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserratregular"
                        android:textSize="20sp"/>
                    <TextView
                        android:layout_margin="5dp"
                        android:id="@+id/txt_plot_catagory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserratregular"
                        android:textSize="20sp"
                        android:singleLine="true"
                        android:ellipsize="none"/>
                    <TextView
                        android:layout_margin="5dp"
                        android:id="@+id/txt_spl_Premium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserratregular"
                        android:textSize="20sp"/>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true">
                <LinearLayout
                    android:visibility="gone"
                    android:id="@+id/liner_approved_success"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_fragment_approved"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Approved"
                        android:fontFamily="@font/montserratregular"
                        android:textColor="#2ecc71"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/layout_remarks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/txt_freg_plot"
                        android:layout_marginLeft="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Remarks"
                        android:fontFamily="@font/montserratregular"
                        android:textColor="@android:color/holo_red_dark"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/layout_plot_bot"
                    android:layout_below="@+id/layout_remarks"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="6">
                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4">

                        <EditText
                            android:id="@+id/edt_plot_remarks"
                            android:layout_marginLeft="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:fontFamily="@font/montserratregular"
                            android:hint="@string/Remarkshint"
                            android:inputType="textMultiLine"
                            android:background="@android:color/transparent"/>
                    </androidx.cardview.widget.CardView>
                    <Button
                        android:id="@+id/btnPlot"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text=" Approve Plot "
                        android:fontFamily="@font/montserratregular"
                        android:background="@color/colorPrimary"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:layout_weight="2"/>
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
            android:id="@+id/prog_plot_approval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</FrameLayout>